<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:id="@+id/bca_monday" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:id="@+id/bca_tuesday" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:id="@+id/bca_wednesday" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:id="@+id/bca_thursday" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:id="@+id/bca_friday" />
    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:id="@+id/bca_saturday" />
</LinearLayout>