<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:id="@+id/bba_monday"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:id="@+id/bba_tuesday" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:id="@+id/bba_wednesday" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:id="@+id/bba_thursday" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:id="@+id/bba_friday" />
</LinearLayout>